slight code clean-up and update to Java 17 functionalities